--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "build": "parcel build"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "bootstrap": "^5.3.5",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "buffer": "^6.0.3",
     "parcel": "^2.14.0"
   }
 }
